Feature/alarm (#81)
* feature/adding backend alarm

* feature/adding frontend alarm
