# libs/nest/alarm/src/lib/controller/alarm.controller.ts
@@ -1,9 +1,10 @@
-import { Body, Controller, Put, UseGuards } from '@nestjs/common';
-import { ApiBearerAuth, ApiOperation, ApiTags } from '@nestjs/swagger';
+import { Body, Controller, Get, Put, UseGuards } from '@nestjs/common';
+import { ApiBearerAuth, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
 import { AuthGuard } from '@sparrow-server/auth';
 
 import { AlarmService } from '../services/alarm.service';
 import { SetAlarm } from './model/set-alarm';
+import { SetAlarmModeRequest } from './model/set-alarm-mode.request';
 
 @ApiTags('Alarm')
 @UseGuards(AuthGuard)
@@ -16,5 +17,18 @@ export class AlarmController {
   @Put('set')
   public async setAlarm(@Body() request: SetAlarm): Promise<void> {
     await this._alarmService.setAlarm(request.isOn);
+  }
+
+  @ApiOperation({ operationId: 'setAlarmMode' })
+  @Put('set-mode')
+  public async setAlarmMode(@Body() request: SetAlarmModeRequest): Promise<void> {
+    await this._alarmService.setAlarmMode(request.isActive);
+  }
+
+  @ApiOperation({ operationId: 'getAlarmMode' })
+  @ApiResponse({ type: Boolean })
+  @Get('mode')
+  public async getAlarmMode(): Promise<boolean> {
+    return this._alarmService.getAlarmMode();
   }
 }
