# libs/nest/entities/src/lib/entities/alarm-preferences.ts
@@ -1,0 +1,10 @@
+import { Column, Entity, PrimaryGeneratedColumn } from 'typeorm';
+
+@Entity()
+export class AlarmPreferences {
+  @PrimaryGeneratedColumn()
+  public id!: number;
+
+  @Column()
+  public isActive: boolean = false;
+}
